# jax-examples

./: jax_qc_implementation_plan_v2.md  non_bo_qc_plan.md  pyproject.toml
benchmarks/: cof_benchmark_plan.md
examples/: 01_h2_basis.py  02_heh_cation.py  03_water_basis_sets.py  04_xyz_roundtrip.py  05_profiling.py  06_integrals_h2.py  07_rhf_scf.py  08_rhf_tier2.py  09_uhf_tier3.py  10_properties.py  11_gradients.py  12_geom_opt.py  README.md  _colors.py
fp/: compute_ops.py  compute_ops_main.py  qchem_fp.py
jax_qc/: __init__.py
jax_qc/basis/: __init__.py  bse_fetch.py  build.py  cache.py  normalize.py  parse.py
jax_qc/core/: __init__.py  constants.py  types.py
jax_qc/geomopt/: __init__.py  hessian.py  interface.py  optimizer.py
jax_qc/grad/: __init__.py  interface.py  numerical_grad.py  rhf_grad.py
jax_qc/integrals/: __init__.py  boys.py  eri.py  gaussian_product.py  interface.py  kinetic.py  mcmurchie_davidson.py  nuclear.py  obara_saika.py  overlap.py  screening.py  spherical.py
jax_qc/io/: __init__.py  input_parser.py  xyz.py
jax_qc/profiling/: __init__.py  report.py  timer.py
jax_qc/properties/: __init__.py  dipole.py  mulliken.py  orbital_analysis.py
jax_qc/scf/: __init__.py  damping.py  density.py  diis.py  energy.py  fock.py  guess.py  interface.py  orthogonalize.py  rhf.py  (+1 more)
tests/: conftest.py  test_basis.py  test_benchmark_cof.py  test_boys.py  test_core.py  test_geomopt.py  test_gradient.py  test_integrals.py  test_integrals_general_l.py  test_profiling.py  test_properties.py  test_scf.py  test_scf_tier2.py  test_uhf.py  test_xyz.py
